Changes to git ignore

--- a/.gitignore
+++ b/.gitignore
@@ -33,3 +33,5 @@ thesis_skel/thesis_DGH.aux
 thesis_skel/thesis_DGL.aux
 thesis_skel/thesis_alignment.aux
 thesis_skel/thesis_follow.aux
+thesis_skel/thesis_2009_skel.fdb_latexmk
+thesis_skel/.DS_Store
