Added more stuff to gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -35,3 +35,23 @@ thesis_skel/thesis_alignment.aux
 thesis_skel/thesis_follow.aux
 thesis_skel/thesis_2009_skel.fdb_latexmk
 thesis_skel/.DS_Store
+thesis_skel/thesis_2009_skel.pdf
+thesis_skel/thesis_2009_skel.synctex.gz
+thesis_skel/thesis_intro.aux
+thesis_skel/thesis_CRnNu.aux
+thesis_skel/thesis_2009_skel.fls
+thesis_skel/thesis_2009_skel.log
+thesis_skel/thesis_2009_skel.aux
+thesis_skel/thesis_2009_skel.bbl
+thesis_skel/thesis_2009_skel.blg
+thesis_skel/thesis_2009_skel.lof
+thesis_skel/thesis_2009_skel.toc
+thesis_skel/thesis_EAS.aux
+thesis_skel/thesis_acknowledge.aux
+thesis_skel/thesis_appendix_A.aux
+thesis_skel/thesis_appendix_B.aux
+thesis_skel/thesis_appendix_C.aux
+thesis_skel/thesis_appendix_D.aux
+thesis_skel/thesis_conclusion.aux
+thesis_skel/thesis_refs.bib
+thesis_skel/thesis_setup.aux
