Added appendix E to git ignore

--- a/.gitignore
+++ b/.gitignore
@@ -55,3 +55,4 @@ thesis_skel/thesis_appendix_D.aux
 thesis_skel/thesis_conclusion.aux
 thesis_skel/thesis_refs.bib
 thesis_skel/thesis_setup.aux
+thesis_skel/thesis_appendix_E.aux
