--- a/.gitignore
+++ b/.gitignore
@@ -56,3 +56,4 @@ thesis_skel/thesis_conclusion.aux
 thesis_skel/thesis_refs.bib
 thesis_skel/thesis_setup.aux
 thesis_skel/thesis_appendix_E.aux
+thesis_skel/thesis_glossary.aux
